--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,17 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "database": "CongoP3_development",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
+    "database": "CongoP3_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "database": "CongoP3_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   }
 }
