--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
+    "dev": "concurrently \"nodemon app.js\" \"cd ./client  && npm start \" ",
     "start": "node app.js"
   },
   "repository": {
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/JJVenable/Congo#readme",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "faker": "^5.5.3",
