--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "faker": "^5.5.3",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
+    "reactjs-popup": "^2.0.5",
     "sequelize": "^6.13.0"
   }
 }
