--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"nodemon app.js\" \"cd ./client  && npm start \" ",
-    "start": "node app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js",
+    "build": "npm install && npx sequelize-cli db:migrate && cd client && rm -rf build && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "faker": "^5.5.3",
+    "heroku": "^7.59.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
